Fix #2 - Increase search results z-index

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -329,6 +329,10 @@ width: 70px;
       width: 200px;
     }
 
+    .voog-search-modal {
+      z-index: 2;
+    }
+
 
 /* content */
 
